#391 Fix region label and registration address fields

--- a/Magento_Customer/layout/customer_account_create.xml
+++ b/Magento_Customer/layout/customer_account_create.xml
@@ -18,6 +18,7 @@
                 <block class="Magento\Customer\Block\Form\Register" name="customer_form_register" template="Magento_Customer::form/register.phtml" cacheable="false">
                     <arguments>
                         <argument name="attribute_data" xsi:type="object">Magento\Customer\Block\DataProviders\AddressAttributeData</argument>
+                        <argument name="post_code_config" xsi:type="object">Magento\Customer\Block\DataProviders\PostCodesPatternsAttributeData</argument>
                     </arguments>
                     <container name="form.additional.info" as="form_additional_info"/>
                     <container name="customer.form.register.fields.before" as="form_fields_before" label="Form Fields Before" htmlTag="div" htmlClass="customer-form-before"/>
