--- a/Magento_Catalog/templates/product/composite/fieldset/options/view/checkable.phtml
+++ b/Magento_Catalog/templates/product/composite/fieldset/options/view/checkable.phtml
@@ -120,7 +120,10 @@ if ($option): ?>
                 </span>
                 <?php if ($productPriceViewModel->displayPriceInclAndExclTax()): ?>
                 <div class="text-xs">
-                    (<?= $escaper->escapeHtml(__('Excl. Tax')) ?>: <?= /* @noEscape */ $productPriceViewModel->format($valueBasePrice) ?>)
+                    (<?= $escaper->escapeHtml(__('Excl. Tax')) ?>:
+                    <span x-html="getFormattedOptionPrice('<?= $escaper->escapeHtmlAttr($optionId) ?>', true) || ''">
+                        <?= /* @noEscape */ $productPriceViewModel->format($valueBasePrice) ?>
+                    </span>)
                 </div>
                 <?php endif; ?>
             </label>
