--- a/Magento_Catalog/templates/product/composite/fieldset/options/view/multiple.phtml
+++ b/Magento_Catalog/templates/product/composite/fieldset/options/view/multiple.phtml
@@ -108,7 +108,8 @@ if ($option): ?>
                 x-html="'<?= $escaper->escapeJs($escaper->escapeHtml($value->getTitle())) ?> '
                     + (getFormattedOptionPrice('<?= $escaper->escapeJs($optionId) ?>') || '')
                     <?php if ($productPriceViewModel->displayPriceInclAndExclTax() && $valueBasePrice > 0): ?>
-                    + ' (<?= $escaper->escapeJs(__('Excl. Tax')) ?>: <?= $escaper->escapeJs($productPriceViewModel->format($valueBasePrice)) ?>)'
+                    + ' (<?= $escaper->escapeJs(__('Excl. Tax')) ?>: '
+                    + (getFormattedOptionPrice('<?= $escaper->escapeJs($optionId) ?>', true) || '') + ')'
                     <?php endif; ?>
                 "
             >
