--- a/Magento_Theme/templates/html/header.phtml
+++ b/Magento_Theme/templates/html/header.phtml
@@ -49,9 +49,13 @@ $showMiniCart = $storeConfig->getStoreConfig(\Magento\Checkout\Block\Cart\Sideba
             }
         }
     }
-    function initCartTooltip() {
+    function initCartButton() {
         return {
-            showTooltip: false
+            showTooltip: false,
+            isCartOpen: false,
+            dupa(e) {
+                console.log(e)
+            }
         }
     }
 </script>
@@ -129,16 +133,20 @@ $showMiniCart = $storeConfig->getStoreConfig(\Magento\Checkout\Block\Cart\Sideba
             <?= $block->getChildHtml('customer') ?>
 
             <!--Cart Icon-->
-            <a id="menu-cart-icon"
-               <?php if ($showMiniCart): ?>@click.prevent.stop="$dispatch('toggle-cart',{});"<?php endif ?>
-               class="relative inline-block ml-1 no-underline sm:ml-3 hover:text-black"
-               href="<?= $escaper->escapeUrl($block->getUrl('checkout/cart/index')) ?>"
-               x-data="initCartTooltip()"
-               @mouseover.prevent.stop="showTooltip = true"
-               @mouseleave.prevent.stop="showTooltip = false"
-               @focus.prevent.stop="showTooltip = true"
-               @blur.prevent.stop="showTooltip = false"
-               :aria-label="
+            <button
+                id="menu-cart-icon"
+                x-data="initCartButton()"
+                <?php if ($showMiniCart): ?>
+                    @click.prevent.stop="$dispatch('toggle-cart', { isOpen: true })"
+                <?php endif ?>
+                @toggle-cart.window="isCartOpen = $event.detail.isOpen"
+                class="relative inline-block ml-1 no-underline sm:ml-3 hover:text-black"
+                @mouseover.prevent.stop="showTooltip = true"
+                @mouseleave.prevent.stop="showTooltip = false"
+                @focus.prevent.stop="showTooltip = true"
+                @blur.prevent.stop="showTooltip = false"
+                aria-label="<?= $escaper->escapeHtml(__('Toggle minicart')) ?>"
+                :aria-description="
                 isCartEmpty ?
                     '<?= $escaper->escapeHtml(__('Cart is empty')) ?>' :
                     hyva.str(
@@ -147,7 +155,9 @@ $showMiniCart = $storeConfig->getStoreConfig(\Magento\Checkout\Block\Cart\Sideba
                         cart.summary_count === 1 ? '' : 's'
                     )
                 "
-               :aria-disabled="isCartEmpty"
+                :aria-disabled="isCartEmpty"
+                :aria-expanded="isCartOpen"
+                aria-haspopup="dialog"
             >
                 <span class="sr-only label">
                     <?= $escaper->escapeHtml(__('Cart')) ?>
@@ -190,16 +200,16 @@ $showMiniCart = $storeConfig->getStoreConfig(\Magento\Checkout\Block\Cart\Sideba
                     25
                 ) ?>
 
-                <span x-text="cart.summary_count"
-                      class="absolute top-0 right-0 hidden h-5 px-2 py-1 -mt-5 -mr-4 text-xs font-semibold
+                <span
+                    x-text="cart.summary_count"
+                    x-show="!isCartEmpty"
+                    class="
+                        absolute top-0 right-0 h-5 px-2 py-1 -mt-5 -mr-4 text-xs font-semibold
                         leading-none text-center text-white uppercase transform -translate-x-1
-                        translate-y-1/2 rounded-full bg-primary"
-                      :class="{
-                        'hidden': !cart.summary_count,
-                        'block': cart.summary_count
-                      }"
+                        translate-y-1/2 rounded-full bg-primary
+                    "
                 ></span>
-            </a>
+            </button>
 
         </div>
     </div>
