--- a/Magento_Theme/templates/html/header/menu/desktop.phtml
+++ b/Magento_Theme/templates/html/header/menu/desktop.phtml
@@ -47,11 +47,7 @@ $block->setData('cache_tags', $viewModelNavigation->getIdentities());
                         @mouseleave="hoverPanelActiveId = 0"
                         @keyup.escape="hoverPanelActiveId = 0"
                     >
-                        <span class="flex items-center block p-3 text-md bg-opacity-95"
-                            <?php if (!empty($menuItem['childData'])): ?>
-                                :aria-expanded="hoverPanelActiveId === '<?= /* @noEscape */ (string) $index ?>' ? 'true' : 'false'"
-                            <?php endif; ?> 
-                        >
+                        <span class="flex items-center block p-3 text-md bg-opacity-95">
                             <a class="w-full py-3 text-base text-gray-700 hover:underline level-0"
                                href="<?= $escaper->escapeUrl($menuItem['url']) ?>"
                                title="<?= $escaper->escapeHtmlAttr($menuItem['name']) ?>"
@@ -64,7 +60,7 @@ $block->setData('cache_tags', $viewModelNavigation->getIdentities());
                                         :aria-expanded="hoverPanelActiveId === '<?= /* @noEscape */ (string) $index ?>' ? 'true' : 'false'"
                                         @click="hoverPanelActiveId = '<?= /* @noEscape */ (string) $index ?>'"
                                 >
-                                    <?= $heroiconsSolid->chevronDownHtml("flex self-center h-5 w-5", 25, 25) ?>
+                                    <?= $heroiconsSolid->chevronDownHtml("flex self-center h-5 w-5", 25, 25, ['aria-hidden' => 'true']) ?>
                                     <span class="sr-only">
                                         <?= $escaper->escapeHtml(__('Show submenu for %1 category', $menuItem['name'])) ?>
                                     </span>
