--- a/Magento_Bundle/templates/catalog/product/view/price.phtml
+++ b/Magento_Bundle/templates/catalog/product/view/price.phtml
@@ -185,7 +185,11 @@ $displayTax = $productPriceViewModel->displayPriceIncludingTax();
     <div class="final-price flex">
         <span id="product-price-<?= (int)$product->getId() ?>"
               class="price-wrapper title-font font-medium text-2xl text-gray-900">
-            <span class="price" x-html="getFormattedFinalPrice()"></span>
+            <span
+                aria-live="assertive"
+                class="price"
+                x-html="getFormattedFinalPrice()"
+            />
         </span>
     </div>
     <?php if ($productPriceViewModel->displayPriceInclAndExclTax()): ?>
